src/test/ui/issue-40402-ref-hints/issue-40402-1.stderr
error[E0507]: cannot move out of indexed content
  --> $DIR/issue-40402-1.rs:19:13
   |
19 |     let e = f.v[0];
   |             ^^^^^^ cannot move out of indexed content

error: aborting due to previous error

